Fixed table overflow-y

--- a/src/components/CandidateTable/CandidateTable.module.css
+++ b/src/components/CandidateTable/CandidateTable.module.css
@@ -1,3 +1,7 @@
 .wrapper {
     padding-top: 10px;
 }
+
+.table {
+    height: 220px;
+}
