--- a/src/pages/Electorate/Electorate.module.css
+++ b/src/pages/Electorate/Electorate.module.css
@@ -5,5 +5,5 @@
 
 .dataPane {
 	width: 100vw;
-	height: 448px;
+	height: 400px;
 }
